# ergovisual

./: Cargo.toml  Dioxus.toml
public/: tailwind.css
src/: main.rs
src/data/: data.rs
src/routes/: blockvisualizer.rs  home.rs
src/utils/: chart.rs
