[package]
name = "ergovisual"
version = "0.1.0"
authors = ["Nederg <ergxned@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
dioxus-fullstack = "0.5.6"
charming = { version = "0.3.1", features = ["wasm"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
