[package]
name = "ergovisual"
version = "0.1.0"
authors = ["65787978"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
dioxus-fullstack = "0.5.6"
charming = { version = "0.3.1", features = ["wasm"] }
reqwest = { version = "0.12.5", features = ["json"] }
gloo = { version = "0.11.0", features = ["futures"] }
serde_json = "1.0.125"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
